<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditActivity">

    <View
        android:id="@+id/appbg5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/appCredit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/creditTitle"
        android:textAlignment="center"
        android:textColor="@color/light_blue_title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/appbg5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/proj_Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/proj_desc"
        android:textSize="18sp"
        android:textStyle="italic"
        android:textAlignment="inherit"
        android:textColor="@color/sub_info"
        app:layout_constraintTop_toBottomOf="@id/appCredit"
        />

    <TextView
        android:id="@+id/proj_Dev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/devs"
        android:textSize="18sp"
        android:textColor="@color/light_blue_title"
        app:layout_constraintTop_toBottomOf="@id/proj_Description"
        />

    <TextView
        android:id="@+id/dev1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="40dp"
        android:text="@string/dev_name1"
        android:textSize="18sp"
        android:textStyle="italic"
        android:textAlignment="center"
        android:textColor="@color/sub_info"
        app:layout_constraintTop_toBottomOf="@id/proj_Dev"
        />
    <TextView
        android:id="@+id/dev2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="40dp"
        android:text="@string/dev_name2"
        android:textSize="18sp"
        android:textStyle="italic"
        android:textAlignment="center"
        android:textColor="@color/sub_info"
        app:layout_constraintTop_toBottomOf="@id/dev1"
        />
    <TextView
        android:id="@+id/dev3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="40dp"
        android:text="@string/dev_name3"
        android:textSize="18sp"
        android:textStyle="italic"
        android:textAlignment="center"
        android:textColor="@color/sub_info"
        app:layout_constraintTop_toBottomOf="@id/dev2"
        />
    <TextView
        android:id="@+id/dev4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="40dp"
        android:text="@string/dev_name4"
        android:textSize="18sp"
        android:textStyle="italic"
        android:textAlignment="center"
        android:textColor="@color/sub_info"
        app:layout_constraintTop_toBottomOf="@id/dev3"
        />
    <TextView
        android:id="@+id/dev5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="40dp"
        android:text="@string/dev_name5"
        android:textSize="18sp"
        android:textStyle="italic"
        android:textAlignment="center"
        android:textColor="@color/sub_info"
        app:layout_constraintTop_toBottomOf="@id/dev4"
        />


    <TextView
        android:id="@+id/sponsor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/sponsor"
        android:textSize="18sp"
        android:textColor="@color/light_blue_title"
        app:layout_constraintTop_toBottomOf="@id/dev5"
        />
    <TextView
        android:id="@+id/sponsor1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="40dp"
        android:text="@string/sponsor_name"
        android:textSize="18sp"
        android:textStyle="italic"
        android:textAlignment="center"
        android:textColor="@color/sub_info"
        app:layout_constraintTop_toBottomOf="@id/sponsor"
        />




    <Button
        android:id="@+id/btn_return5"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btn_ltblue"
        android:elevation="9dp"
        android:text="@string/btn_back"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>